Inconsistent error on mongos when renameCollection target already exists

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 5.2.0, 5.0.5, 5.1.1
    • Affects Version/s: 5.0.3
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.1, v5.0
    • Sharding EMEA 2021-11-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Unable to find source-code formatter for language: 48,name: namespaceexists. Available languages are: actionscript, ada, applescript, bash, c, c#, c++, cpp, css, erlang, go, groovy, haskell, html, java, javascript, js, json, lua, none, nyan, objc, perl, php, python, r, rainbow, ruby, scala, sh, sql, swift, visualbasic, xml, yaml
      
      

      When renaming a collection to a target that already exists (without specifying dropTarget) renameCollection will fail with the following:

      • errmsg: "target namespace exists"
      • code: 48
      • codeName: "NamespaceExists"

      This corresponds to a documented error code: NamespaceExists(48) (message: "target namespace exists").

      On mongos, the command responds is more cryptic:

      • errmsg: "Target collection %s exists but dropTarget is not set"
      • code: 5807601
      • codeName: "Location5807601"

      This error code originates from checkShardedRenamePreconditions.

      Is it intentional for these errors to be inconsistent?

      Note: This was tested on 5.0.x, but I presume the inconsistency goes back to older server versions.

            Assignee:
            Pierlauro Sciarelli
            Reporter:
            Jeremy Mikola (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: