SERVER-60632 return NamespaceExists from mongos when dropTarget=false